--- a/pms/views/account_bank_statement_views.xml
+++ b/pms/views/account_bank_statement_views.xml
@@ -4,9 +4,16 @@
         <field name="model">account.bank.statement</field>
         <field name="inherit_id" ref="account.view_bank_statement_form" />
         <field name="arch" type="xml">
+
             <xpath expr="//field[@name='company_id']" position="after">
                 <field name="pms_property_id" />
             </xpath>
+
+            <xpath expr="//field[@name='ref']" position="after">
+                <field name="pms_property_id" invisible="1" />
+                <field name="folio_ids" widget="many2many_tags" optional="hidden" />
+            </xpath>
+
         </field>
     </record>
 </odoo>
