[IMP] pms: show/hide partner name when reservation type change

--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -351,7 +351,10 @@
                     </h3>
                     <group>
                         <group string="General Info" name="contact_details">
-                            <field name="partner_id" attrs="{'invisible':[('reservation_type','in',('out'))]}" />
+                            <field
+                                name="partner_id"
+                                attrs="{'invisible':[('reservation_type','in',('out'))]}"
+                            />
                             <field
                                 name="document_type"
                                 attrs="{'invisible':[('reservation_type','in',('out'))]}"
