[IMP]pms: improvement invoicing data checks

--- a/pms/views/pms_property_views.xml
+++ b/pms/views/pms_property_views.xml
@@ -93,14 +93,6 @@
                                     attrs="{'invisible': [('default_invoicing_policy', '=', 'manual')]}"
                                 />
                                 <field
-                                    name="journal_simplified_invoice_id"
-                                    attrs="{'required': [('default_invoicing_policy', '!=', 'manual')]}"
-                                    domain="[
-                                        ('type', '=', 'sale'),
-                                        ('company_id','=',company_id),
-                                    ]"
-                                />
-                                <field
                                     name="journal_normal_invoice_id"
                                     attrs="{'required': [('default_invoicing_policy', '!=', 'manual')]}"
                                     domain="[
@@ -108,6 +100,15 @@
                                         ('company_id','=',company_id),
                                     ]"
                                 />
+                                <field
+                                    name="journal_simplified_invoice_id"
+                                    attrs="{'required': [('default_invoicing_policy', '!=', 'manual')]}"
+                                    domain="[
+                                        ('type', '=', 'sale'),
+                                        ('company_id','=',company_id),
+                                    ]"
+                                />
+                                <field name="max_amount_simplified_invoice" />
                             </group>
                         </page>
                         <page string="Email Configuration">
