--- a/pms/wizards/wizard_folio_changes.xml
+++ b/pms/wizards/wizard_folio_changes.xml
@@ -251,6 +251,56 @@
                             </div>
                         </div>
                     </div>
+                    <div
+                        class="col-4 pr-0"
+                        attrs="{'invisible':[('modification_type','!=','reservations')]}"
+                    >
+                        <div class="border h-100 pt-2 px-2">
+                            <div class="row">
+                                <div class="col-2">
+                                    <field
+                                        name="apply_partner_id"
+                                        widget="boolean_toggle"
+                                    />
+                                </div>
+                                <div class="col-6">
+                                    <label for="new_partner_id" />
+                                </div>
+                                <div class="col-4">
+                                    <field
+                                        name="new_partner_id"
+                                        nolabel="1"
+                                        attrs="{'invisible':[('apply_partner_id','=',False)], 'required':[('apply_partner_id','=',True)]}"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="col-4 pr-0"
+                        attrs="{'invisible':[('modification_type','!=','reservations')]}"
+                    >
+                        <div class="border h-100 pt-2 px-2">
+                            <div class="row">
+                                <div class="col-2">
+                                    <field
+                                        name="apply_pricelist_id"
+                                        widget="boolean_toggle"
+                                    />
+                                </div>
+                                <div class="col-6">
+                                    <label for="new_pricelist_id" />
+                                </div>
+                                <div class="col-4">
+                                    <field
+                                        name="new_pricelist_id"
+                                        nolabel="1"
+                                        attrs="{'invisible':[('apply_pricelist_id','=',False)], 'required':[('apply_pricelist_id','=',True)]}"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4 pr-0">
                         <div
                             class="border h-100 pt-2 px-2"
