[IMP]pms: added new fields and their respective computes in pms_checkin_partner

--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -70,8 +70,44 @@
                             <field name="state_id" />
                             <field name="email" />
                             <field name="mobile" />
+                            <field name="phone" />
                             <field name="document_id" invisible="1" />
                             <field name="pms_property_id" invisible="1" />
+                            <label for="residence_street" string="Residence Address" />
+                            <div class="o_address_format">
+                                <field
+                                    name="residence_street"
+                                    placeholder="Street..."
+                                    class="o_address_street"
+                                />
+                                <field
+                                    name="residence_street2"
+                                    placeholder="Street 2..."
+                                    class="o_address_street"
+                                />
+                                <field
+                                    name="residence_city"
+                                    placeholder="City"
+                                    class="o_address_city"
+                                />
+                                <field
+                                    name="residence_state_id"
+                                    class="o_address_state"
+                                    placeholder="State"
+                                    options="{'no_open': True, 'no_quick_create': True}"
+                                />
+                                <field
+                                    name="residence_zip"
+                                    placeholder="ZIP"
+                                    class="o_address_zip"
+                                />
+                                <field
+                                    name="residence_country_id"
+                                    placeholder="Country"
+                                    class="o_address_country"
+                                    options='{"no_open": True, "no_create": True}'
+                                />
+                            </div>
                             <field name="arrival" />
                             <field name="departure" />
                         </group>
@@ -79,6 +115,7 @@
                             <field name="reservation_id" />
                             <field name="folio_id" />
                             <field name="identifier" />
+                            <field name="partner_relationship" />
                             <field name="pms_property_id" invisible="1" />
                         </group>
                     </group>
