--- a/pms/views/res_partner_views.xml
+++ b/pms/views/res_partner_views.xml
@@ -98,6 +98,45 @@
                     </group>
                 </page>
             </xpath>
+            <xpath expr="//page[@name='personal_information_page']">
+                <group>
+                    <label for="residence_street" string="Residence Address" />
+                    <div class="o_address_format">
+                        <field
+                            name="residence_street"
+                            placeholder="Street..."
+                            class="o_address_street"
+                        />
+                        <field
+                            name="residence_street2"
+                            placeholder="Street 2..."
+                            class="o_address_street"
+                        />
+                        <field
+                            name="residence_city"
+                            placeholder="City"
+                            class="o_address_city"
+                        />
+                        <field
+                            name="residence_state_id"
+                            class="o_address_state"
+                            placeholder="State"
+                            options="{'no_open': True, 'no_quick_create': True}"
+                        />
+                        <field
+                            name="residence_zip"
+                            placeholder="ZIP"
+                            class="o_address_zip"
+                        />
+                        <field
+                            name="residence_country_id"
+                            placeholder="Country"
+                            class="o_address_country"
+                            options='{"no_open": True, "no_create": True}'
+                        />
+                    </div>
+                </group>
+            </xpath>
         </field>
     </record>
 
