--- a/pms/views/res_company_views.xml
+++ b/pms/views/res_company_views.xml
@@ -11,6 +11,9 @@
                     </group>
                 </page>
             </xpath>
+            <xpath expr="//field[@name='website']" position="after">
+                <field name="url_advert" />
+            </xpath>
         </field>
     </record>
 </odoo>
