--- a/pms_l10n_es/views/res_partner_id_number_view.xml
+++ b/pms_l10n_es/views/res_partner_id_number_view.xml
@@ -3,7 +3,10 @@
     <record id="inherit_partner_id_numbers_form" model="ir.ui.view">
         <field name="name">inherit.res.partner.id_number.form</field>
         <field name="model">res.partner.id_number</field>
-        <field name="inherit_id" ref="partner_identification.view_partner_id_numbers_form" />
+        <field
+            name="inherit_id"
+            ref="partner_identification.view_partner_id_numbers_form"
+        />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='valid_until']" position="after">
                 <field name="support_number" />
@@ -13,7 +16,10 @@
     <record id="inherit_partner_id_numbers_tree" model="ir.ui.view">
         <field name="name">inherit.res.partner.id_number.tree</field>
         <field name="model">res.partner.id_number</field>
-        <field name="inherit_id" ref="partner_identification.view_partner_id_numbers_tree" />
+        <field
+            name="inherit_id"
+            ref="partner_identification.view_partner_id_numbers_tree"
+        />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='valid_until']" position="after">
                 <field name="support_number" />
